fix(integration tests): change tests to properly work with functions